Fixed radius on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ body{
         left:0;
         top:0;
         right:0;
+        border-radius: 0;
     }
 }
 
